<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_pf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pf">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        style="?pf_lock_screen"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutCompat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="26dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/title_text_view"
            style="?pf_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lock_screen_title_pf"
            android:theme="@style/PFLockScreenTitleTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <th.co.cdgs.mobile.biopin.pincode.views.PFCodeView
            android:id="@+id/code_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:weightSum="16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

        <TextView
            android:id="@+id/title_text_view_forget"
            style="?pf_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:text="@string/lock_screen_title_pf_forget"
            android:theme="@style/PFLockScreenTitleForgetTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/code_view" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linear_top_num_pad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view_forget">

            <View
                android:id="@+id/view_pad_col_1"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@drawable/line_vertical_num_pad"
                app:layout_constraintBottom_toBottomOf="@+id/frame_button_0"
                app:layout_constraintEnd_toStartOf="@id/frame_button_2"
                app:layout_constraintStart_toEndOf="@+id/frame_button_1"
                app:layout_constraintTop_toTopOf="@+id/frame_button_1" />

            <View
                android:id="@+id/view_pad_col_2"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@drawable/line_vertical_num_pad"
                app:layout_constraintBottom_toBottomOf="@+id/frame_button_0"
                app:layout_constraintEnd_toStartOf="@id/frame_button_3"
                app:layout_constraintStart_toEndOf="@+id/frame_button_2"
                app:layout_constraintTop_toTopOf="@+id/frame_button_2" />

            <FrameLayout
                android:id="@+id/frame_button_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintEnd_toStartOf="@id/frame_button_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/button_1"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/number_1"
                    android:textSize="@dimen/button_number_size"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_button_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintEnd_toStartOf="@id/frame_button_3"
                app:layout_constraintStart_toEndOf="@+id/frame_button_1"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/button_2"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/number_2"
                    android:textSize="@dimen/button_number_size"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_button_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/frame_button_2"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/button_3"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/number_3"
                    android:textSize="@dimen/button_number_size"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <View
                android:id="@+id/view_pad_row_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/line_horizontal_num_pad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frame_button_3" />

            <FrameLayout
                android:id="@+id/frame_button_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintEnd_toStartOf="@id/frame_button_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_pad_row_1">

                <TextView
                    android:id="@+id/button_4"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/number_4"
                    android:textSize="@dimen/button_number_size"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_button_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintEnd_toStartOf="@id/frame_button_6"
                app:layout_constraintStart_toEndOf="@id/frame_button_4"
                app:layout_constraintTop_toBottomOf="@+id/view_pad_row_1">

                <TextView
                    android:id="@+id/button_5"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/number_5"
                    android:textSize="@dimen/button_number_size"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_button_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/frame_button_5"
                app:layout_constraintTop_toBottomOf="@+id/view_pad_row_1">

                <TextView
                    android:id="@+id/button_6"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/number_6"
                    android:textSize="@dimen/button_number_size"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <View
                android:id="@+id/view_pad_row_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/line_horizontal_num_pad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frame_button_5" />

            <FrameLayout
                android:id="@+id/frame_button_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintEnd_toStartOf="@+id/frame_button_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_pad_row_2">

                <TextView
                    android:id="@+id/button_7"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/number_7"
                    android:textSize="@dimen/button_number_size"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_button_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintEnd_toStartOf="@+id/frame_button_9"
                app:layout_constraintStart_toEndOf="@+id/frame_button_7"
                app:layout_constraintTop_toBottomOf="@+id/view_pad_row_2">

                <TextView
                    android:id="@+id/button_8"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/number_8"
                    android:textSize="@dimen/button_number_size"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_button_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/frame_button_8"
                app:layout_constraintTop_toBottomOf="@+id/view_pad_row_2">

                <TextView
                    android:id="@+id/button_9"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/number_9"
                    android:textSize="@dimen/button_number_size"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <View
                android:id="@+id/view_pad_row_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/line_horizontal_num_pad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frame_button_8" />

            <FrameLayout
                android:id="@+id/frame_button_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_constraintEnd_toStartOf="@+id/frame_button_0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_pad_row_3">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/button_left"
                    style="?pf_fingerprint_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/side_button_background_pf"
                    android:gravity="center"
                    android:scaleType="center"
                    android:theme="@style/PFLockScreenFingerPrintButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_button_0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintEnd_toStartOf="@+id/frame_button_right"
                app:layout_constraintStart_toEndOf="@+id/frame_button_left"
                app:layout_constraintTop_toBottomOf="@+id/view_pad_row_3">

                <TextView
                    android:id="@+id/button_0"
                    style="?pf_key_button"
                    android:layout_width="@dimen/button_lock_screen_fp_size"
                    android:layout_height="@dimen/button_lock_screen_fp_size"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/number_0"
                    android:textSize="@dimen/button_number_size"
                    android:theme="@style/PFLockScreenButtonStyle" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_button_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/frame_button_0"
                app:layout_constraintTop_toBottomOf="@+id/view_pad_row_3">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/button_right"
                    style="?pf_delete_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/side_button_background_pf"
                    android:gravity="center"
                    android:theme="@style/PFLockScreenDeleteButtonStyle" />
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
